  allowing files to be created in arbitrary locations. The RPC protocol
  is protected using SSL/X.509 certificates, but as a design principle
  Ganeti does not permit arbitrary paths to be passed.
- The parsing of the variants file for OSes (see
  :manpage:`ganeti-os-interface(8)` has been slightly changed: now empty
  lines and comment lines are ignored for better readability.


Version 2.6.1
-------------

*(Released Fri, 12 Oct 2012)*

A small bugfix release.

Fix double use of PRIORITY_OPT in gnt-node migrate, that would make the
command unusable.

Commands that issue many jobs don't fail anymore just because some jobs
take so long that other jobs are archived.

Failures during gnt-instance reinstall are reflected by the exit status.

Issue 190 fixed. Check for DRBD in cluster verify is enabled only when
DRBD is enabled.

When always_failover is set, --allow-failover is not required in migrate
commands anymore.

bash_completion works even if extglob is disabled

Fix bug with locks that made failover for RDB-based instances fail.

Fix bug in non-mirrored instance allocation that would make Ganeti
choose a random node instead of one based on the allocator metric.

Support for newer versions of pylint and pep8.

Hail doesn't fail anymore when trying to add an instance of type
'file', 'sharedfile' or 'rbd'.

Add new Makefile target to rebuild the whole dist, so that all files are
included.


Version 2.6.0
-------------

*(Released Fri, 27 Jul 2012)*


.. attention:: The ``LUXI`` protocol has been made more consistent
   regarding its handling of command arguments. This, however, leads to
   incompatibility issues with previous versions. Please ensure that you
   restart Ganeti daemons soon after the upgrade, otherwise most
   ``LUXI`` calls (job submission, setting/resetting the drain flag,
   pausing/resuming the watcher, cancelling and archiving jobs, querying
   the cluster configuration) will fail.


New features
~~~~~~~~~~~~

Instance run status